# tabular-data-synthesis

./: .gitignore  README.md  pyproject.toml  run_dataset.sh  setup.cfg
docs/: report.md  setup-guide.md
outputs/src/tabsynth/exp/abalone/check/: config.toml  info.json  results_catboost.json  results_similarity.json  test_real.csv  train_synthetic.csv
outputs/src/tabsynth/exp/adult/check/: info.json  loss.csv  results_catboost.json  results_similarity.json  test_real.csv  train_synthetic.csv
outputs/src/tabsynth/exp/california/check/: config.toml  info.json  results_catboost.json  results_similarity.json  test_real.csv  train_synthetic.csv
outputs/src/tabsynth/exp/cardio/check/: info.json  results_catboost.json  results_similarity.json  test_real.csv  train_synthetic.csv
outputs/src/tabsynth/exp/churn2/check/: config.toml  info.json  results_catboost.json  results_similarity.json  test_real.csv  train_synthetic.csv
outputs/src/tabsynth/exp/diabetes/check/: config.toml  info.json  loss.csv  results_catboost.json  results_similarity.json  train_synthetic.csv
scripts/: generate_workflow_diagram.py  show_data_format.py
src/tabsynth/evaluation/: table_evaluator_fix.py  tabsyndex.py
src/tabsynth/exp/abalone/: config.toml
src/tabsynth/exp/california/: config.toml
src/tabsynth/exp/cardio/: config.toml
src/tabsynth/lib/: data.py  util.py  variables.py
src/tabsynth/scripts/: pipeline.py
src/tabsynth/tabular_processing/: tabular_data_controller.py
